<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/myaccount"
            android:title="@string/my_account" />
        <item
            android:id="@+id/groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/teamofservice"
            android:title="@string/teams_of_service" />
        <item
        android:id="@+id/aboutus"
        android:title="@string/about_us" />


    </group>

    <group>
        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
    </group>

</menu>
