<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bio.Addbio">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >



    <TextView
        android:id="@+id/addbio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_bio"
        android:background="@drawable/bio"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="357dp" />


        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_bio"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textColorHint="@color/blue"

            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="357dp" />


        <TextView
            android:id="@+id/detailsbio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_bio_to_express_yourself"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="357dp" />


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/biobuttoncolor"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="357dp" />


        <ProgressBar

            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />





    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
